Refactor tests for FriendsActivity